# zz2l2nu

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  dataMCcomparison.C  doFullAnalysis.sh  env.sh  job_template.sh  launchAnalysis.sh  listSamplesToRun.txt  listSamplesToRun_2017.txt  listSamplesToRun_InstrMET.txt  listSamplesToRun_MELA.txt  listSamplesToRun_NRB-baobab.txt  listSamplesToRun_NRB.txt  prepareAllJobs.py  runHZZ2l2nu.cc  samples.h  simple_run_macro.sh  systList.txt
.gitlab-ci/: install_MELA.sh  install_MelaAnalytics.sh
Common/: BTagger.cc  BTagger.h  EwkCorrections.cc  EwkCorrections.h  LeptonsEfficiencySF.cc  LeptonsEfficiencySF.h  ObjectSelection.cc  ObjectSelection.h  PhotonEfficiencySF.h  RoccoR.h  Tables.cc  Tables.h  Trigger.cc  Trigger.h  Utils.cc  Utils.h
Includes/: HZZ2l2nuLooper.h  LooperMain.h  ObjectSelection.h  SmartSelectionMonitor.h  SmartSelectionMonitor_hzz.h  Utils.h
Loopers_Includes/: BTagger.h  LooperMain.h  SmartSelectionMonitor.h  SmartSelectionMonitor_hzz.h
Loopers_Sources/: BTagger.cc  HZZ2l2nuLooper.cc  InstrMETLooper.cc  LooperMain.cc  NRBLooper.cc  SmartSelectionMonitor.cc  SmartSelectionMonitor_hzz.cc  TnPLooper.cc
NRBMacros/: DrawfinalMT.py  NonResonantBckg_TotalUncert_Plotter.C  alphaValue.root  nrb.py  outputHZZ_NRB.root  plottery.py  printNRBuncertainty.py  printNRByields.py  printNRByields2.py  simple_run_macro.sh  step0DrawNRBplots.py  step1printNRByields.py  step2printNRBuncertainty.py  step3DrawfinalMT.py  theLocalCata.txt  utils.py
Sources/: ArgParser.cc  HZZ2l2nuLooper.cc  InstrMETLooper.cc  LooperMain.cc  ObjectSelection.cc  SmartSelectionMonitor.cc  SmartSelectionMonitor_hzz.cc  Utils.cc
Tools/: ArgParser.cc  CMS_lumi.C  CMS_lumi.h  HowToRunInstrMET.txt  InstrMET_syst_study.C  extractBeff.C  extractWeightsFromATH2.C  harvestInstrMET.C  index.php  prepareAllJobs.py  prepareDataCards.py  userInfo.db
Tools/haddws/: Makefile  haddws  haddws.C
WeightsAndDatadriven/: GJetsNLOWeights.C  computeGJetsNLOWeight.C  computeWeights.sh  makePhotonTemplates.C  prepare_templates_for_InstrMET.sh
WeightsAndDatadriven/InstrMET/: InstrMET_lineshape_mass.root  InstrMET_weight_NVtx.root  InstrMET_weight_pt.root  computeInstrMETWeights.sh  doClosureTest.sh  launchAnalysis_computeInstrMETWeights_step1.sh  launchAnalysis_computeInstrMETWeights_step3.sh  listSamplesToRun_InstrMET_dataOnly.txt  listSamplesToRun_dataOnly.txt  macroToComputeClosureTestWeights.C  macroToComputeInstrMETWeights.C  macroToComputeInstrMETWeights.C.backupWrongErrors  macroToComputeInstrMETWeights_C_ACLiC_dict_rdict.pcm
cmake/: FindMela.cmake  Findxgboost.cmake  Findyamlcpp.cmake  hzz2l2nuConfig.cmake
config/: 2016-ul-postVFP.yaml  2016-ul-preVFP.yaml  2016-ul.yaml  2016.yaml  2016HIPM-ul.yaml  2016noHIPM-ul.yaml  2017-ul.yaml  2017.yaml  2018-ul.yaml  2018.yaml  UL2017.yaml  dataset_groups.yaml  dataset_settings.yaml  dataset_settings_VBF.yaml  dataset_settings_new2.yaml  dataset_settings_ul.yaml  dilep2018.yaml  mjjcut.yaml  opendata.yaml  pdf.yaml  photon_deta.yaml  photon_mjj.yaml  photon_ptmiss.yaml  plot_data_sim.yaml  plot_data_sim_dilepton.yaml  plot_data_sim_egammafrommisid.yaml  plot_data_sim_electron.yaml  plot_data_sim_electron_ul.yaml  plot_data_sim_photon.yaml  plot_data_sim_photon_ul.yaml  plot_data_sim_photon_znunu_ul.yaml  plot_data_sim_zgamma.yaml  plot_data_sim_zgamma_ul.yaml  samples_2016.yaml  samples_EGammaFromMisid_2016HIPM.txt  samples_EGammaFromMisid_2016noHIPM.txt  samples_EGammaFromMisid_2017.txt  samples_EGammaFromMisid_2018.txt  samples_InstrMET_2016.txt  samples_InstrMET_2016postVFP.txt  (+39 more)
config/singleelectron/: 2016-ul-postVFP.yaml  2016HIPM-ul.yaml  2016noHIPM-ul.yaml  2017-ul.yaml  2018-ul.yaml
config/singlephoton/: 2016HIPM-ul.yaml  2016noHIPM-ul.yaml  2017-ul.yaml  2018-ul.yaml
config/zgamma/: 2016HIPM-ul.yaml  2016noHIPM-ul.yaml  2017-ul.yaml  2018-ul.yaml
data/: README.md
data/BTag/: btagging_efficiencies_deep2016.root  btagging_efficiencies_deep2017.root  btagging_efficiencies_deep2018.root  wp_deepJet_106XUL16postVFP_v3_preULformat.csv  wp_deepJet_106XUL16postVFP_v3_preULformat_csvCommaWorkaround.csv  wp_deepJet_106XUL16preVFP_v2_preULformat.csv  wp_deepJet_106XUL16preVFP_v2_preULformat_csvCommaWorkaround.csv  wp_deepJet_106XUL17_v3_preULformat.csv  wp_deepJet_106XUL18_v2_preULformat.csv
data/InstrMetReweighting/: lineshape_mass_2016.root  lineshape_mass_2017.root  lineshape_mass_2018.root  meanWeights_2016.root  meanWeights_2017.root  meanWeights_2018.root  weight_eta_2016.root  weight_eta_2017.root  weight_eta_2018.root  weight_nvtx_2016.root  (+5 more)
include/: AnalysisCommon.h  BTagWeight.h  BTagger.h  CollectionBuilder.h  Dataset.h  DileptonTrees.h  EGammaFromMisid.h  EWCorrectionWeight.h  ElectronBuilder.h  ElectronTrees.h  EventCache.h  EventNumberFilter.h  EventTrees.h  EwkCorrections.h  FileInPath.h  GJetsWeight.h  GenJetBuilder.h  GenPhotonBuilder.h  GenWeight.h  GenZZBuilder.h  HZZException.h  InstrMetAnalysis.h  IsoTrackBuilder.h  JetBuilder.h  JetCorrector.h  JetGeometricVeto.h  KFactorCorrection.h  L1TPrefiringWeight.h  LeptonWeight.h  LeptonsEfficiencySF.h  Logger.h  Looper.h  LooperMain.h  MainAnalysis.h  MeKinFilter.h  MelaHandler.h  MelaWeight.h  MetFilters.h  MetXYCorrections.h  MuonBuilder.h  (+31 more)
python/: dataset.py  util.py
scripts/: submit.sh
src/: AnalysisCommon.cc  ArgParser.cc  BTagCalibrationStandalone.cc  BTagWeight.cc  BTagger.cc  CollectionBuilder.cc  Dataset.cc  DileptonTrees.cc  EGammaFromMisid.cc  EWCorrectionWeight.cc  ElectronBuilder.cc  ElectronTrees.cc  EventNumberFilter.cc  EventTrees.cc  EwkCorrections.cc  FileInPath.cc  GJetsWeight.cc  GenJetBuilder.cc  GenPhotonBuilder.cc  GenWeight.cc  GenZZBuilder.cc  HZZ2l2nuLooper.cc  InstrMETLooper.cc  InstrMetAnalysis.cc  IsoTrackBuilder.cc  JetBuilder.cc  JetCorrector.cc  JetGeometricVeto.cc  KFactorCorrection.cc  L1TPrefiringWeight.cc  LeptonWeight.cc  Logger.cc  LooperMain.cc  MainAnalysis.cc  MeKinFilter.cc  MelaHandler.cc  MelaWeight.cc  MetFilters.cc  MetXYCorrections.cc  MuonBuilder.cc  (+34 more)
(+55 files in other folders)
